// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<span
  className="note nowrap spacer-left"
>
  [
  background_task.type.
  ]
</span>
`;

exports[`renders 2`] = `
<span
  className="note nowrap spacer-left"
>
  [
  background_task.type.
   - incremental
  ]
</span>
`;
